--- a/templates/index.html
+++ b/templates/index.html
@@ -271,10 +271,10 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Serge Kamgang</h1>
+            <h1>Eric Yuyun</h1>
             <p>DevOps Engineer</p>
-            <p>serge.kamgang@utrains.org</p>
-            <p>Total Experience: 3+ Years</p>
+            <p>yuyunericyungsi@gmail.com</p>
+            <p>Total Experience: 8+ Years</p>
         </header>
 
         <section class="section summary">
